--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fas fa-store me-2"></i>It's Fake Shop</a>
+            <a class="navbar-brand" href="#"><i class="fas fa-store me-2"></i>R Jayani Maulana S</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
